Update for a new session

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -20,7 +20,7 @@
   --accent-info: #6d81fe;
   --accent-success: #42c3a7;
   --accent-warning: #f0ec8b;
-  --accent-danger: #ff9575;
+  --accent-danger: #e96b45;
   --accent-info-lite: rgb(109 128 254 / 0.37);
   --accent-success-lite: rgb(66 195 167 / 0.37);
   --accent-warning-lite: rgb(240 237 139 / 0.37);
